# LabWork02

./: .gitignore  .~lock.Lab02_Report.docx#  README.md  test.c
output/: arialC0.ppm  arialC1.ppm  arialC2.ppm
src/: CMakeLists.txt  extract_channel.cpp  golomb.cpp  golomb.h  golomb_test.cpp  image_codec.cpp  image_codec.h  image_decode.cpp  image_encode.cpp  mirror_img.cpp
